# esphome-linux

./: .dockerignore  .gitignore  BUILD.md  BUILDROOT_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLUGIN_ARCHITECTURE.md  QUICKSTART.md  README.md  cross.Dockerfile  meson.build  meson_options.txt
.github/workflows/: build.yml
cross/: ingenic-t31.txt
docs/: BLE_REFACTORING.md  PLUGIN_DEVELOPMENT.md  PLUGIN_HOOKS.md
libble/: build.sh
nimble/: build.sh
plugins/: README.md
plugins/bluetooth_proxy/: README.md  ble_scanner.c  ble_scanner.cpp  ble_scanner.h  bluetooth_proxy_plugin.c  meson.build
scripts/: build-ingenic-t31.sh  build.sh  setup-ingenic-sdk.sh
src/: esphome_api.c  esphome_plugin.c  esphome_proto.c  main.c  switch_proto.c
src/include/: esphome_api.h  esphome_plugin.h  esphome_plugin_internal.h  esphome_proto.h  switch_proto.h
